[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprite/иконки персанажей/MAKL0 — копия-export.png" type="Texture" id=1]
[ext_resource path="res://sprite/иконки персанажей/Вика_заблок.png" type="Texture" id=2]
[ext_resource path="res://sprite/блоки/background/pine2-export.png" type="Texture" id=3]
[ext_resource path="res://sprite/новый интерфейс/Back.png" type="Texture" id=4]
[ext_resource path="res://peronaz_vabor.gd" type="Script" id=5]
[ext_resource path="res://sprite/блоки/background/sky-export.png" type="Texture" id=6]
[ext_resource path="res://sprite/блоки/background/mountain2-export.png" type="Texture" id=7]
[ext_resource path="res://sprite/блоки/background/pine1-export.png" type="Texture" id=8]
[ext_resource path="res://sprite/блоки/background/cloud-export.png" type="Texture" id=9]
[ext_resource path="res://sprite/иконки персанажей/Вика.png" type="Texture" id=10]
[ext_resource path="res://sprite/новый интерфейс/ГЕМ.png" type="Texture" id=11]

[node name="personaz_vabor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sky-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 6 )

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 400, 224 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 7 )

[node name="Pine1-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 304 )
scale = Vector2( 0.119767, 0.0976353 )
texture = ExtResource( 8 )

[node name="Pine2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 344 )
scale = Vector2( 0.121512, 0.0562814 )
texture = ExtResource( 3 )

[node name="Cloud-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 9 )

[node name="Maйкл" type="TextureButton" parent="."]
margin_left = 72.0
margin_top = 72.0
margin_right = 192.0
margin_bottom = 192.0
texture_normal = ExtResource( 1 )
expand = true

[node name="VIKA_zabl" type="TextureButton" parent="."]
margin_left = 200.0
margin_top = 72.0
margin_right = 320.0
margin_bottom = 192.0
texture_normal = ExtResource( 2 )
expand = true

[node name="VIKA" type="TextureButton" parent="."]
visible = false
margin_left = 200.0
margin_top = 72.0
margin_right = 320.0
margin_bottom = 192.0
texture_normal = ExtResource( 10 )
expand = true

[node name="Label3" type="Label" parent="."]
margin_left = 80.0
margin_top = 80.0
margin_right = 165.0
margin_bottom = 122.0
text = "Mike"

[node name="Label4" type="Label" parent="."]
margin_left = 208.0
margin_top = 80.0
margin_right = 293.0
margin_bottom = 122.0
text = "Vika"

[node name="НАЗАД" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 285.0
margin_right = 91.0
margin_bottom = 358.0
rect_scale = Vector2( 1.4, 1.4 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 11 )
expand = true

[connection signal="pressed" from="Maйкл" to="." method="_on_Ma_pressed"]
[connection signal="pressed" from="VIKA" to="." method="_on_VIKA_pressed"]
[connection signal="pressed" from="НАЗАД" to="." method="_on__pressed"]
